--- a/server/package.json
+++ b/server/package.json
@@ -2,15 +2,22 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Logica de la página de viajes",
-  "main": "index.js",
+  "main": "app.js",
+  "type": "module",
   "scripts": {
+    "dev": "node --watch app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ignacio Lopez",
   "license": "ISC",
   "homepage": "https://github.com/IgnacioLopez04/TravelPage",
   "dependencies": {
-    "express": "4.19.2"
+    "bcrypt": "^5.1.1",
+    "cors": "2.8.5",
+    "express": "4.19.2",
+    "jsonwebtoken": "^9.0.2",
+    "mysql2": "3.10.2",
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "standard": "17.1.0"
