--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,12 @@
   "homepage": "https://github.com/IgnacioLopez04/TravelPage",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.3.0",
     "cookie-parser": "^1.4.6",
     "cors": "2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.19.2",
+    "express-fileupload": "^1.5.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "3.10.2",
     "zod": "3.23.8"
